# f9-file-backend

./: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  REFACTORING_PLAN.md  SYNC_ASYNC_CONSISTENCY_ANALYSIS.md  SYNC_ASYNC_QUICK_REFERENCE.md  pyproject.toml  pyrightconfig.json
.githooks/: pre-commit
bugs/fixed/: bug_report_from_lore_mcp_1.md
f9_file_backend/: __init__.py  async_git_backend.py  async_interfaces.py  async_local.py  async_openai_backend.py  compat.py  factory.py  git_backend.py  interfaces.py  local.py  locking.py  openai_backend.py  path_utils.py  registry.py  utils.py  validation.py
f9_file_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
features/: all_backends.md  openai_backend.md
features/closed/: compatibility_updates.md  git_backend.md
scripts/: __init__.py  install_hooks.sh  live_sync_test.py
tests/: __init__.py  fakes.py  test_async_backend_fixes.py  test_async_backends.py  test_auto_sync.py  test_checksums.py  test_compat.py  test_factory.py  test_git_backend.py  test_glob.py  test_local_backend.py  test_metadata.py  test_openai_backend.py  test_path_utils.py  test_registry.py  test_streaming.py  test_sync_sessions.py  test_utils.py  test_validation.py
tests/integration/: __init__.py  test_async_integration.py  test_checksum_integration.py  test_git_backend_integration.py  test_glob_integration.py  test_local_backend_integration.py  test_openai_backend_integration.py  test_streaming_integration.py  test_sync_sessions_integration.py
