[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f9-file-backend"
version = "0.1.14"
description = "Unified interface for file storage backends with a local filesystem implementation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "f9 team" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
openai = ["openai>=1.0"]
checksum = ["blake3>=0.3"]
all = ["blake3>=0.3", "openai>=1.0"]

[tool.setuptools.packages.find]
include = ["f9_file_backend*"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
    "D200",
    "D107",
    "TRY003",
    "EM102",
    "D102",
    "COM812",
    "ANN202",
    "DTZ006",
    "D212",
    "D413",
    "TC003",
    "RUF022",
    "INP001",
    "D100",
    "PT001",
    "D103",
    "S101",
    "S603",
    "S607",
    "PLR2004",
    "PTH117",
]
ignore = [
    "B905",  # zip strict= keyword not yet widely adopted
]

[tool.ruff.lint.per-file-ignores]
"tests/test_local_backend.py" = ["S101", "T201"]
"tests/integration/test_local_backend_integration.py" = ["S101", "T201"]
"tests/test_git_backend.py" = ["S101", "T201"]
"tests/integration/test_git_backend_integration.py" = ["S101", "T201"]
"tests/test_openai_backend.py" = ["S101"]
"tests/integration/test_openai_backend_integration.py" = ["S101"]
"tests/test_streaming.py" = ["S101", "ANN202", "PLR2004", "E501", "UP028"]
"tests/integration/test_streaming_integration.py" = ["S101", "ANN202", "PLR2004"]
"tests/test_checksums.py" = ["S101", "ANN202", "PLR2004"]
"tests/test_utils.py" = ["S101", "ANN202", "PLR2004"]
"tests/test_path_utils.py" = ["S101", "ANN202", "PLR2004"]
"tests/test_validation.py" = ["S101", "ANN202", "PLR2004"]
"tests/integration/test_checksum_integration.py" = ["S101", "ANN202", "PLR2004", "S603", "S607"]
".githooks/pre-commit" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["f9_file_backend"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
